 * Feature: The fill and magic wand tools now always at least fill the initial pixel if gap closing or shrinking would up with a blank result. Thanks MorrowShore for suggesting.
 * Fix: Properly apply transforms if the only thing you change is the opacity or blend mode. Thanks Blozzom for reporting.
 * Feature: Add Indigo, Pool Table and Rust color schemes. Thanks Weenifer for contributing.

2024-11-06 Version 2.2.2-beta.4
 * Fix: Solve rendering glitches with selection outlines that happen on some systems. Thanks xxxx for reporting.
 * Feature: Allow scaling animation exports. Thanks Hopfel for animating across a giant canvas.
 * Fix: Allow disabling the application proxy in the network preferences and automatically detect bad proxy configurations that can't actually make connections. Thanks FishEggsThe for reporting.
 * Fix: Improve socket error messages, listing the error code and adding extra information on what to do if a proxy error occurs. Thanks FishEggsThe for reporting.
 * Fix: Center soft brushes on the cursor better, they got offset to the top-left from correcting for size discontinuity before. Thanks Meiren for reporting.
 * Fix: Don't mess up gridmap settings when opening brush settings dialog and initially changing a value in it. Thanks Blozzom for reporting.
 * Fix: Default "confirm action" to both the regular enter key as well as the one on the numpad. Thanks MachKerman for reporting.
 * Feature: Add settings button to color wheel, sliders and palette at the top-left of the dock. For the wheel, this allows changing the settings here now instead of having to go into the preferences. For the sliders, you can now toggle the color space here and decide whether to show all sliders and the hex input. For the palette, this just moves the menu button that used to be in the row below. Thanks MachKerman for suggesting.